# nix-darwin-agent

./: Cargo.toml
src/: main.rs
